Fix navbar: align header-inner edges with body container content

--- a/css/style.css
+++ b/css/style.css
@@ -330,8 +330,11 @@ textarea {
   display: flex;
   align-items: center;
   width: 100%;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  max-width: var(--container-max);
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: var(--container-padding);
+  padding-right: var(--container-padding);
 }
 
 /* Logo */
